[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.8"
solana-program = "=2.0.3"
spl-token = {version="6.0.0", features = ["no-entrypoint"]}
thiserror = "1.0.63"

[lib]
crate-type = ["cdylib", "lib"]
